Fix overflowing animation on landing

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -54,7 +54,7 @@
     font-weight: bolder;
     font-size: 4rem;
     margin: 0;
-    width: 8em;
+    width: 6em;
     text-align: left;
 
     background-image: linear-gradient(45deg, var(--green), var(--light-blue));  
